# learning-rust

./: .gitignore  .gitlab-ci.yml  README.md  README.org  html.setup  into.org  london.org  overview.css  reveal.setup  shell.nix
.templates/css/: reveal.scss
ci/: export-course.el  run-in-ci.el  setup.el
courses/01-advanced-async/: 000-what-is-async.org  010-async-in-core-std.org  011-future-anatomy.org  012-exercise-basic.org  020-signals.org  022-excercise-real-wake.org  025-runtimes.org  030-shutdown-select.org  031-wakenotify.org  032-actor-programming.org  033-channels.org  033-pin-project.org  040-async-hacking.org  040-async-patterns.org  050-runtimes.org  061-exercise-reactor.org  README.org
courses/01-advanced-async/exercises/03-runtimes/: Cargo.toml
courses/01-advanced-async/exercises/06-async-chat/: Cargo.toml
courses/01-advanced-async/exercises/06-async-chat/src/: lib.rs  message.rs
courses/02-ownership/: 35-borrowing-exercises.org  50-threading.org  (+4 more)
dd-async/: 010-what-is-async.org  020-async-in-core-std.org  030-future-anatomy.org  035-async-patterns.org  040-shutdown-select.org  050-runtimes.org  050-shutdown-select.org  055-futures-wakenotify.org  057-actor-programming.org  060-exercise-timer.org  061-exercise-reactor.org  50-runtimes.org  README.org
dd-ownership/: #README.org#  .#README.org  10-memory-management.org  20-why-ownership.org  21-thought-on-raii.org  25-ownership-quiz.org  30-borrowing.org  40-lifetimes.org  45-borrowing-exercises.org  50-threading.org  55-thread-exercises.org  60-patterns-arc-mutex.org  README.org
(+28 files in other folders)
