[package]
name = "runtimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-std = { version = "1.0", features = ["attributes"] }

smol = "1.0"
futures-lite = "1.0"
async-task = "4.0"

once_cell = "1.0"
flume = "0.10"