[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

### First, you should pick a basic structure for this exercise!
[dependencies]

### The differences between tokio and async-std are very small.
# tokio = { version = "1.0", features = ["full"] }
# async-std = { version = "1.0", features = ["attribute"] }


### If you pick smol you will need to rely on some other utility
### crates as well (for example async-lock, async-net, async-channel)
# smol = "1.0"
# async-lock = "2.0"
# async-net = "1.0"
# async-channel = "1.0"


### You can also try your hand at actor programming with Actix.  Two
### crates are needed here: Actix, and the Actix runtime, which
### re-exports a lot of tokio utilities for network and socket access!
# actix = "0.11"
# actix-rt = "2.0"
